# sql-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/workflows/: ci.yml  docker-publish.yml
examples/: mariadb.toml  postgres.toml  sqlite.toml
src/: config.rs  http.rs  main.rs
src/driver/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
tests/: http.rs  live.rs  postgres.rs  sqlite.rs
tests/common/: mod.rs
